[gd_scene load_steps=8 format=3 uid="uid://buxfvkx8vcrrl"]

[ext_resource type="Script" path="res://scripts/levels/place.gd" id="1_vbbl5"]
[ext_resource type="Texture2D" uid="uid://4fw814p1u7b0" path="res://assets/tilemaps/farm-32.png" id="2_kbck6"]
[ext_resource type="Script" path="res://scripts/levels/tile_map.gd" id="3_sf0w2"]
[ext_resource type="PackedScene" uid="uid://cgkovwjfn23kb" path="res://scene/menu/game_gui.tscn" id="4_loa5o"]
[ext_resource type="Script" path="res://scripts/creature_template.gd" id="5_uxbc3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxrkh"]
texture = ExtResource("2_kbck6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
0:14/0 = 0

[sub_resource type="TileSet" id="TileSet_o1p04"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_mxrkh")

[node name="Farm" type="Node2D"]
script = ExtResource("1_vbbl5")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_o1p04")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(524289, 196609, 2, 524294, 327681, 2, 196609, 196609, 0, 196614, 327681, 0, 262145, 196609, 1, 327681, 196609, 2, 196610, 262145, 0, 262146, 262145, 1, 327682, 262145, 2, 196611, 327681, 0, 262147, 327681, 1, 327683, 327681, 2, 196612, 196609, 0, 262148, 196609, 1, 327684, 196609, 2, 196613, 262145, 0, 262149, 262145, 1, 327685, 262145, 2, 262150, 327681, 1, 327686, 327681, 2, 393220, 196609, 0, 458756, 196609, 1, 524292, 196609, 2, 393221, 262145, 0, 458757, 262145, 1, 524293, 262145, 2, 393222, 327681, 0, 458758, 327681, 1, 393217, 196609, 0, 458753, 196609, 1, 393218, 262145, 0, 458754, 262145, 1, 524290, 262145, 2, 393219, 327681, 0, 458755, 327681, 1, 524291, 327681, 2)
layer_1/name = "creature"
layer_2/name = "Foreground"
script = ExtResource("3_sf0w2")

[node name="GUI" parent="TileMap" instance=ExtResource("4_loa5o")]
offset_left = 16.0
offset_top = 12.0
offset_right = 240.0
offset_bottom = 336.0

[node name="Timer" parent="TileMap/GUI/Stamina" index="0"]
one_shot = true

[node name="Score" parent="TileMap/GUI" index="1"]
horizontal_alignment = 2

[node name="HintPanel" parent="TileMap/GUI" index="3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.071
anchor_top = -0.037
anchor_right = -0.071
anchor_bottom = -0.037
offset_left = -0.0959997
offset_top = -0.0120001
offset_right = 255.904
offset_bottom = 351.988

[node name="Button" parent="TileMap/GUI/HintPanel" index="0"]
offset_left = 91.75
offset_top = 41.5
offset_right = 157.75
offset_bottom = 72.5

[node name="Panel" parent="TileMap/GUI/HintPanel" index="1"]
offset_left = 32.0
offset_top = 96.0
offset_right = 225.0
offset_bottom = 288.0

[node name="Creatures" type="Node2D" parent="TileMap"]

[node name="Common" type="Node2D" parent="TileMap/Creatures"]

[node name="Ant" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Ant"
sprite_position = Vector2i(0, 3)
pattern = [[1, 1, 1, 1, 1, 1]]

[node name="Ladybug" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Ladybug"
sprite_position = Vector2i(1, 3)
pattern = [[1], [1], [1], [1], [1], [1]]

[node name="Gnat" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Gnat"
sprite_position = Vector2i(2, 3)
pattern = [[1, 1], [1, 1], [1, 1]]

[node name="Moth" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Moth"
sprite_position = Vector2i(3, 3)
pattern = [[1, 1, 1], [1, 1, 1]]

[node name="Grasshopper" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Grasshopper"
sprite_position = Vector2i(4, 3)
pattern = [[1, 1, 1, 1], [1, 1]]

[node name="Praying_mantis" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Praying_mantis"
sprite_position = Vector2i(5, 3)
pattern = [[1, 1], [1, 1, 1, 1]]

[node name="Dandelion" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Dandelion"
sprite_position = Vector2i(1, 4)
pattern = [[1, 1, 1, 1, 1, 1]]

[node name="Clover" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Clover"
sprite_position = Vector2i(1, 4)
pattern = [[1], [1], [1], [1], [1], [1]]

[node name="Daisy" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Daisy"
sprite_position = Vector2i(2, 4)
pattern = [[1, 1], [1, 1], [1, 1]]

[node name="Wild_grass" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Wild_grass"
sprite_position = Vector2i(3, 4)
pattern = [[1, 1, 1], [1, 1, 1]]

[node name="Poppy" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Poppy"
sprite_position = Vector2i(4, 4)
pattern = [[1, 1, 1, 1], [1, 1]]

[node name="Calendula" type="Node2D" parent="TileMap/Creatures/Common"]
script = ExtResource("5_uxbc3")
creature_name = "Calendula"
sprite_position = Vector2i(5, 4)
pattern = [[1, 1], [1, 1, 1, 1]]

[node name="Uncommon" type="Node2D" parent="TileMap/Creatures"]

[node name="Dragonfly" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Dragonfly"
rarity = "Uncommon"
sprite_position = Vector2i(0, 5)
pattern = [[1, 1, 1, 1, 1, 0]]

[node name="Wild_bee" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Wild_bee"
rarity = "Uncommon"
sprite_position = Vector2i(1, 5)
pattern = [[1], [1], [1], [1], [1]]

[node name="Butterfly_caterpillar" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Butterfly_caterpillar"
rarity = "Uncommon"
sprite_position = Vector2i(2, 5)
pattern = [[1, 1], [1, 1], [1]]

[node name="Cricket" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Cricket"
rarity = "Uncommon"
sprite_position = Vector2i(3, 5)
pattern = [[1, 1, 1], [1, 1]]

[node name="Tussock_moth" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Tussock_moth"
rarity = "Uncommon"
sprite_position = Vector2i(4, 5)
pattern = [[1, 1], [1, 1, 1]]

[node name="Chamomile" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Chamomile"
rarity = "Uncommon"
sprite_position = Vector2i(0, 6)
pattern = [[1, 1, 1, 1, 1]]

[node name="Lavender" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Lavender"
rarity = "Uncommon"
sprite_position = Vector2i(1, 6)
pattern = [[1], [1], [1], [1], [1]]

[node name="Mint" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Mint"
rarity = "Uncommon"
sprite_position = Vector2i(2, 6)
pattern = [[1, 1], [1, 1], [1]]

[node name="Fern" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Fern"
rarity = "Uncommon"
sprite_position = Vector2i(3, 6)
pattern = [[1, 1, 1], [1, 1]]

[node name="Tomato" type="Node2D" parent="TileMap/Creatures/Uncommon"]
script = ExtResource("5_uxbc3")
creature_name = "Tomato"
rarity = "Uncommon"
sprite_position = Vector2i(4, 6)
pattern = [[1, 1], [1, 1, 1]]

[node name="Rare" type="Node2D" parent="TileMap/Creatures"]

[node name="Monarch_butterfly" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Monarch_butterfly"
rarity = "Rare"
sprite_position = Vector2i(0, 7)
pattern = [[1, 1, 1, 1]]

[node name="Rhinoceros_beetle" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Rhinoceros_beetle"
rarity = "Rare"
sprite_position = Vector2i(1, 7)
pattern = [[1], [1], [1], [1]]

[node name="Blowfly" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Blowfly"
rarity = "Rare"
sprite_position = Vector2i(2, 7)
pattern = [[1, 1], [1, 1]]

[node name="Jumping_spider" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Jumping_spider"
rarity = "Rare"
sprite_position = Vector2i(3, 7)
pattern = [[1, 0, 0, 1], [0, 1, 1]]

[node name="Giant_sunflower" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Giant_sunflower"
rarity = "Rare"
sprite_position = Vector2i(0, 8)
pattern = [[1, 1, 1, 1]]

[node name="Garden_cactus" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Garden_cactus"
rarity = "Rare"
sprite_position = Vector2i(1, 8)
pattern = [[1], [1], [1], [1]]

[node name="Roses" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Roses"
rarity = "Rare"
sprite_position = Vector2i(2, 8)
pattern = [[1, 1], [1, 1]]

[node name="Pumpkin" type="Node2D" parent="TileMap/Creatures/Rare"]
script = ExtResource("5_uxbc3")
creature_name = "Pumpkin"
rarity = "Rare"
sprite_position = Vector2i(3, 8)
pattern = [[1, 0, 0, 1], [0, 1, 1]]

[node name="Epic" type="Node2D" parent="TileMap/Creatures"]

[node name="Atlas_moth" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Atlas_moth"
rarity = "Epic"
sprite_position = Vector2i(0, 9)
pattern = [[1, 1, 1]]

[node name="Imperial_dragonfly" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Imperial_dragonfly"
rarity = "Epic"
sprite_position = Vector2i(1, 9)
pattern = [[1], [1], [1]]

[node name="Bengal_beetle" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Bengal_beetle"
rarity = "Epic"
sprite_position = Vector2i(2, 9)
pattern = [[1, 0, 1], [0, 1]]

[node name="Carnivorous_plant" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Carnivorous_plant"
rarity = "Epic"
sprite_position = Vector2i(0, 10)
pattern = [[1, 1, 1]]

[node name="Giant_cactus" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Giant_cactus"
rarity = "Epic"
sprite_position = Vector2i(1, 10)
pattern = [[1], [1], [1]]

[node name="Water_lotus" type="Node2D" parent="TileMap/Creatures/Epic"]
script = ExtResource("5_uxbc3")
creature_name = "Water_lotus"
rarity = "Epic"
sprite_position = Vector2i(2, 10)
pattern = [[1, 0, 1], [0, 1]]

[node name="Legendary" type="Node2D" parent="TileMap/Creatures"]

[node name="Titanus_giganteus" type="Node2D" parent="TileMap/Creatures/Legendary"]
script = ExtResource("5_uxbc3")
creature_name = "Titanus_giganteus"
rarity = "Legendary"
sprite_position = Vector2i(0, 11)
pattern = [[1, 1]]

[node name="Blue_morpho_butterfly" type="Node2D" parent="TileMap/Creatures/Legendary"]
script = ExtResource("5_uxbc3")
creature_name = "Blue_morpho_butterfly"
rarity = "Legendary"
sprite_position = Vector2i(1, 11)
pattern = [[1], [1]]

[node name="Baobab" type="Node2D" parent="TileMap/Creatures/Legendary"]
script = ExtResource("5_uxbc3")
creature_name = "Baobab"
rarity = "Legendary"
sprite_position = Vector2i(0, 12)
pattern = [[1, 1]]

[node name="Oliver_tree" type="Node2D" parent="TileMap/Creatures/Legendary"]
script = ExtResource("5_uxbc3")
creature_name = "Oliver_tree"
rarity = "Legendary"
sprite_position = Vector2i(1, 12)
pattern = [[1], [1]]

[node name="Mythic" type="Node2D" parent="TileMap/Creatures"]

[node name="Titan_beetle" type="Node2D" parent="TileMap/Creatures/Mythic"]
script = ExtResource("5_uxbc3")
creature_name = "Titan_beetle"
rarity = "Mythic"
sprite_position = Vector2i(0, 13)
pattern = [[1]]

[node name="Ghost_orchid" type="Node2D" parent="TileMap/Creatures/Mythic"]
position = Vector2(-0.561249, 0)
script = ExtResource("5_uxbc3")
creature_name = "Ghost_orchid"
rarity = "Mythic"
sprite_position = Vector2i(0, 14)
pattern = [[1]]

[connection signal="timeout" from="TileMap/GUI/Stamina/Timer" to="TileMap" method="_on_timer_timeout"]
[connection signal="pressed" from="TileMap/GUI/GameEnd/Play again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="TileMap/GUI/GameEnd/Return" to="." method="_on_return_pressed"]

[editable path="TileMap/GUI"]
